<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="false_title">False</string>
    <string name="true_title">True</string>
    <string name="next_button">next_button</string>
    <string name="previous_button">previous_button</string>
    <string name="incorrect_answer">Incorrect</string>
    <string name="correct_answer">Correct</string>
</resources>